# swvcs

./: .gitignore  CMakeLists.txt  HOW_IT_WORKS.md  README.md  SETUP.md  build_err.txt  build_out.txt  install.ps1  installer.iss  package.ps1  usage.txt
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  make_all.txt  make_verbose.txt
include/: commit_dialog.h  commit_engine.h  main_window.h  repository.h  revert_engine.h  sw_connection.h  types.h  utils.h
src/: commit_engine.cpp  main.cpp  repository.cpp  revert_engine.cpp  sw_connection.cpp  utils.cpp
src/gui/: commit_dialog.cpp  main_gui.cpp  main_window.cpp
